--- a/RealEstateManagementSystem/src/main/resources/application.properties
+++ b/RealEstateManagementSystem/src/main/resources/application.properties
@@ -3,7 +3,10 @@ server.port=9091
 spring.datasource.url=jdbc:mysql://localhost:3306/realestate
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Starcity@123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=500MB
+spring.servlet.multipart.max-request-size=500MB
